# praxis

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  deny.toml  docker-compose.yml  update_rules.md
.github/workflows/: ci.yml  release.yml
crates/api-server/: Cargo.toml
crates/api-server/src/: main.rs  routes.rs  state.rs
crates/api-server/web/src/: App.tsx  api.ts  styles.css  types.ts
crates/api-server/web/src/components/: AgentsPanel.tsx  ChatArea.tsx  LogsPanel.tsx  MemoryPanel.tsx  ObservePanel.tsx  ProvidersPanel.tsx  SecurityPanel.tsx  SessionsPanel.tsx  SettingsPanel.tsx  SkillsPanel.tsx
crates/api-server/web/src/components/observe/: TraceDetail.tsx
crates/cli/: Cargo.toml
crates/cli/src/: agents.rs  doctor.rs  main.rs  skills.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/agent/: llm.rs  memory.rs  mod.rs  runtime.rs  sub_agent.rs  task_tracker.rs  tool.rs
crates/core/src/context/: memory_extractor.rs  mod.rs  scroll.rs  session_history.rs
crates/core/src/governance/: matrix.rs  mod.rs  tool_guard.rs
crates/core/src/loops/: approval.rs  goal.rs  graph.rs  loop_trait.rs  mod.rs  parallel.rs  plan.rs  turn.rs  types.rs
crates/core/src/memory/: distilled.rs  episodic.rs  mod.rs  scroll.rs
crates/core/src/orchestration/: acp.rs  broadcast.rs  mod.rs  router.rs  supervisor.rs
crates/core/src/orchestration/a2a/: mod.rs  types.rs
crates/core/src/persistence/: mod.rs
crates/core/src/plugin/: mod.rs
crates/core/src/registry/: agent_def.rs  mod.rs  provider.rs  registry.rs  session.rs
crates/core/src/sandbox/: appcontainer.rs  bubblewrap.rs  env_gate.rs  mod.rs  policy.rs  sandbox.rs  scanner.rs  types.rs
crates/core/src/scheduler/: memory_dream.rs  mod.rs  persist.rs  schedule.rs  task.rs
crates/core/src/tools/: calculator.rs  custom.rs  document_read.rs  mod.rs  shell_tool.rs  time_tool.rs  web_search.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: adapter.rs  client.rs  registry.rs  transport.rs
crates/observe/: Cargo.toml
crates/observe/src/: db.rs  lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: anthropic.rs  gemini.rs  lib.rs  openai.rs  provider_factory.rs
examples/: Cargo.toml
praxis-data/: registry.json
praxis-data/sessions/: sess_102bd00f-e3cb-4eed-86fc-1e64a99a82b7.json  sess_1d70f2ff-f7c2-48d5-8d07-ae7396eb0d83.json  sess_2105ebda-f67d-4f38-a553-47c76776f3ad.json  sess_23555efb-c2e7-4151-817b-4321dad16f6e.json  sess_304b98c8-832f-4afa-8daf-d39354345150.json  sess_396d6bea-bdc2-4899-b072-25677d92a142.json  sess_48d8f540-0d7e-4c3e-94db-706df02b746a.json  sess_4de562a8-50fb-45c0-8ebb-63618daf8634.json  sess_53f3748f-1b9e-4dc5-83b0-9fbb78b83ff3.json  sess_677b906f-ce72-4d3e-87e9-0df67866f0db.json  sess_6aa1f284-0efe-4d97-8cbe-a60fb499d02f.json  sess_73b7aff3-27aa-45ec-b2e2-e8a337b409c6.json  sess_7670a261-d004-4f10-b663-4560152fcf4e.json  sess_7b37b537-04f6-4c36-90eb-d07776fb39e4.json  sess_849153b7-4ae6-4f1c-94c6-24c3a80d3ddc.json  sess_87123110-83ad-478b-80ed-1eec2fb18ea4.json  sess_8dfc043b-5bd7-41ab-84b3-14438eedc41d.json  sess_9c242d68-c6af-4d83-bf0c-272132804eb4.json  sess_a02ee350-bc49-4377-8820-fc3cef274b21.json  sess_b0434d39-8a1c-49e9-9cd4-54f1573ea629.json  sess_b39ee989-47c8-47f4-9a1a-da769ab2da32.json  sess_c16bf22e-b5dd-4723-b000-8c2bd9786f62.json  sess_cfd5e9a0-2f20-4f29-aca1-5f415a64329d.json  sess_d7096fe1-6040-4ac7-ac0e-f6f3719092da.json  sess_da571cbf-ab32-4410-97c5-27e04b214bc5.json  sess_dbbc5776-2704-4537-bbe4-840224a64d82.json  sess_e000a6aa-5d95-4ef5-83d7-f2a97ae609ad.json  sess_e6a73b9c-a71e-44db-adc5-dfee9db73e91.json
scripts/: install.bat  install.ps1  install.sh
