[workspace]
resolver = "3"
members = [
    "crates/api-server",
    "crates/core",
    "crates/cli",
    "crates/observe",
    "crates/runtime",
    "crates/mcp",
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
futures = "0.3"
tracing = "0.1"
wiremock = "0.6"
