[package]
name = "praxis-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
praxis-core = { path = "../core" }
praxis-runtime = { path = "../runtime" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
