[package]
name = "praxis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
praxis-core = { path = "../core" }
praxis-runtime = { path = "../runtime" }
praxis-mcp = { path = "../mcp" }
async-trait.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
