[package]
name = "praxis-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
async-trait.workspace = true
cron = "0.13"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
