[package]
name = "praxis-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
pdf = ["dep:lopdf"]
docx = ["dep:docx-rs"]
all-docs = ["pdf", "docx"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
async-trait.workspace = true
cron = "0.13"
chrono = "0.4"
lopdf = { version = "0.34", optional = true }
docx-rs = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3"
